Update general layouts and profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Marc Sànchez Pifarré</title>
+    <title>César Ortuño Bech</title>
   </head>
 
   <body>
